src/components/layout.scss
@import '~tailwindcss/base';
@import '~tailwindcss/components';

$hamburger-padding-x: 0;
$hamburger-padding-y: 0;
$hamburger-types: (slider);
$hamburger-layer-color: currentColor;
$hamburger-layer-border-radius: 2px;
$hamburger-layer-height: 2px;
$hamburger-layer-width: 36px;
$hamburger-layer-spacing: 8px;

$hamburger-hover-opacity: 1;
$hamburger-active-layer-color: $hamburger-layer-color;
$hamburger-active-hover-opacity: $hamburger-hover-opacity;

@import '~hamburgers/_sass/hamburgers/hamburgers.scss';
@import '~react-accessible-accordion/dist/fancy-example.css';

html {
  hyphens: auto;
}

body {
  @apply overflow-x-hidden;
}

@responsive {
  .row {
    @apply -mx-3 w-row flex flex-row flex-wrap;
  }

  .column {
    @apply -mx-3 w-column flex flex-col flex-wrap;
  }

  .row, .column {
    .col {
      @apply px-3;
    }
  }

  .row-tight {
    @apply -mx-1 w-row-tight flex flex-wrap;
  }

  .column-tight {
    @apply -mx-1 w-column-tight flex flex-col flex-wrap;
  }

  .row-tight, .column-tight {
    .col {
      @apply px-1;
    }
  }
}

@import '~tailwindcss/utilities';

